    publication (not just the selected one)
    - Fixed subscription process bug: the parser doesn't process subscription
    statement when modifying/updating the subscription
    - Fixed notification of subscription end bug
    - Fixed reading ALT image property in article body
    - Fixed some incorrect parser hash locks

2.0.10
    - Fixed the 'Back to article details' bug
    - Removed the weird message from 'Old images'
    - Fixed the language selection in lists bug

2.0.9
    - Fixed incorrect timestamp update on event notify
    - Fixed mysqlclient library link problem on RedHat systems

2.0.8
    - Fixed internal links bug (select proper template according to link
    publication)
    - Fixed incorrect parsing of "list ... article ... keyword <keyword>" bug

2.0.6 (May, 14th 2001)
    - Fixed search list order bug. The parser did not list in the requested
    order the list of searched articles.

2.0.1-2.0.5
    - Fixed install bugs

2.0.0 (March 13th 2001):
    - New items: README, implementation/tpl_cgi, documentation/example,
    documentation/http-config
    - General:
        - Changed Makefiles in order to compile on Redhat 7.0
        implementation/parser:
        - The parser is now campsite_server, a multithreaded daemon.
        - Made campsitectl (start, stop, restart, show status) campsite_server.
        - Made campsite rc script for Sys V like systems (ex. RedHat)
        - Made install script to install campsitectl, campsite scripts for
        automatic start of campsite_server on system startup.
        - The parser prints formatted date, month name (mon_name) and weekday
        name (wday_name) in current language (not in English only).
    - documentation:
        - Updated campsite-guide (changes made on: URLParameters, Print Issue
        Article Image Subscription, Date)
    - implementation/tpl_cgi:
        - This is a small cgi; it receives requests, connects to